--- a/assets/app.css
+++ b/assets/app.css
@@ -1,45 +1,3 @@
-@font-face {
-  font-family: 'EB Garamond';
-
-  font-display: swap;
-
-  src: url('/fonts/EBGaramond-Regular.ttf');
-}
-
-@font-face {
-  font-family: 'EB Garamond';
-
-  font-style: normal;
-
-  font-weight: bold;
-
-  font-display: swap;
-
-  src: url('/fonts/EBGaramond-Bold.ttf');
-}
-
-@font-face {
-  font-family: 'EB Garamond';
-
-  font-style: italic;
-
-  font-display: swap;
-
-  src: url('/fonts/EBGaramond-Italic.ttf');
-}
-
-@font-face {
-  font-family: 'EB Garamond';
-
-  font-style: italic;
-
-  font-weight: bold;
-
-  font-display: swap;
-
-  src: url('/fonts/EBGaramond-BoldItalic.ttf');
-}
-
 @media (prefers-color-scheme: dark) {
   .makeup .hll {
     background-color: var(--color-frappe-base)
@@ -987,7 +945,7 @@
   --tw-contain-size:  ;
   --tw-contain-layout:  ;
   --tw-contain-paint:  ;
-  --tw-contain-style:  ;
+  --tw-contain-style:  
 }
 
 ::backdrop {
@@ -1041,7 +999,7 @@
   --tw-contain-size:  ;
   --tw-contain-layout:  ;
   --tw-contain-paint:  ;
-  --tw-contain-style:  ;
+  --tw-contain-style:  
 }
 
 /* ! tailwindcss v3.4.17 | MIT License | https://tailwindcss.com */
@@ -1517,35 +1475,35 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  border-color: #2563eb;
+  border-color: #2563eb
 }
 
 input::-moz-placeholder, textarea::-moz-placeholder {
   color: #6b7280;
-  opacity: 1;
+  opacity: 1
 }
 
 input::placeholder,textarea::placeholder {
   color: #6b7280;
-  opacity: 1;
+  opacity: 1
 }
 
 ::-webkit-datetime-edit-fields-wrapper {
-  padding: 0;
+  padding: 0
 }
 
 ::-webkit-date-and-time-value {
   min-height: 1.5em;
-  text-align: inherit;
+  text-align: inherit
 }
 
 ::-webkit-datetime-edit {
-  display: inline-flex;
+  display: inline-flex
 }
 
 ::-webkit-datetime-edit,::-webkit-datetime-edit-year-field,::-webkit-datetime-edit-month-field,::-webkit-datetime-edit-day-field,::-webkit-datetime-edit-hour-field,::-webkit-datetime-edit-minute-field,::-webkit-datetime-edit-second-field,::-webkit-datetime-edit-millisecond-field,::-webkit-datetime-edit-meridiem-field {
   padding-top: 0;
-  padding-bottom: 0;
+  padding-bottom: 0
 }
 
 select {
@@ -1555,7 +1513,7 @@ select {
   background-size: 1.5em 1.5em;
   padding-right: 2.5rem;
   -webkit-print-color-adjust: exact;
-          print-color-adjust: exact;
+          print-color-adjust: exact
 }
 
 [multiple],[size]:where(select:not([size="1"])) {
@@ -1565,7 +1523,7 @@ select {
   background-size: initial;
   padding-right: 0.75rem;
   -webkit-print-color-adjust: unset;
-          print-color-adjust: unset;
+          print-color-adjust: unset
 }
 
 [type='checkbox'],[type='radio'] {
@@ -1588,15 +1546,15 @@ select {
   background-color: #fff;
   border-color: #6b7280;
   border-width: 1px;
-  --tw-shadow: 0 0 #0000;
+  --tw-shadow: 0 0 #0000
 }
 
 [type='checkbox'] {
-  border-radius: 0px;
+  border-radius: 0px
 }
 
 [type='radio'] {
-  border-radius: 100%;
+  border-radius: 100%
 }
 
 [type='checkbox']:focus,[type='radio']:focus {
@@ -1608,7 +1566,7 @@ select {
   --tw-ring-color: #2563eb;
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow)
 }
 
 [type='checkbox']:checked,[type='radio']:checked {
@@ -1616,7 +1574,7 @@ select {
   background-color: currentColor;
   background-size: 100% 100%;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat
 }
 
 [type='checkbox']:checked {
@@ -1627,7 +1585,7 @@ select {
   [type='checkbox']:checked {
     -webkit-appearance: auto;
        -moz-appearance: auto;
-            appearance: auto;
+            appearance: auto
   }
 }
 
@@ -1639,13 +1597,13 @@ select {
   [type='radio']:checked {
     -webkit-appearance: auto;
        -moz-appearance: auto;
-            appearance: auto;
+            appearance: auto
   }
 }
 
 [type='checkbox']:checked:hover,[type='checkbox']:checked:focus,[type='radio']:checked:hover,[type='radio']:checked:focus {
   border-color: transparent;
-  background-color: currentColor;
+  background-color: currentColor
 }
 
 [type='checkbox']:indeterminate {
@@ -1661,13 +1619,13 @@ select {
   [type='checkbox']:indeterminate {
     -webkit-appearance: auto;
        -moz-appearance: auto;
-            appearance: auto;
+            appearance: auto
   }
 }
 
 [type='checkbox']:indeterminate:hover,[type='checkbox']:indeterminate:focus {
   border-color: transparent;
-  background-color: currentColor;
+  background-color: currentColor
 }
 
 [type='file'] {
@@ -1677,16 +1635,17 @@ select {
   border-radius: 0;
   padding: 0;
   font-size: unset;
-  line-height: inherit;
+  line-height: inherit
 }
 
 [type='file']:focus {
   outline: 1px solid ButtonText;
-  outline: 1px auto -webkit-focus-ring-color;
+  outline: 1px auto -webkit-focus-ring-color
 }
 
 html {
-  font-family: "EB Garamond", "Georgia", serif;
+  font-family: system-ui, sans-serif;
+  scrollbar-gutter: stable;
 }
 
 a:hover {
@@ -1712,6 +1671,7 @@ pre {
 article p {
   margin-top: 16px;
   margin-bottom: 16px;
+  line-height: 1.6;
 }
 
 article h2 {
@@ -1736,7 +1696,7 @@ article h1 a,
   text-decoration: none;
 }
 
-article ul, 
+article ul,
     article ol {
   margin: 1rem 0;
   padding-left: 2rem;
@@ -1778,36 +1738,17 @@ pre code {
     content: "elixir";
   }
   &.sql::before {
-    content: "sql"
+    content: "sql";
   }
   &.html::before {
-    content: "html"
+    content: "html";
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  a:hover {
-    color: var(--color-macchiato-blue);
-  }
+/* Light theme (default) */
 
-  body {
-    color: var(--color-macchiato-text);
-    background-color: var(--color-macchiato-base);
-  }
-
-  pre {
-    background-color: var(--color-frappe-base);
-  }
-
-  pre code {
-    &::before {
-      background-color: var(--color-frappe-base);
-      color: var(--color-frappe-text);
-    }
-  }
-}
-
-:root {
+:root,
+    [data-theme="light"] {
   --color-frappe-base: rgb(48, 52, 70);
   --color-frappe-blue: rgb(140, 170, 238);
   --color-frappe-text: rgb(198, 208, 245);
@@ -1821,491 +1762,364 @@ pre code {
   --color-macchiato-crust: rgb(24, 25, 38);
 }
 
-.container {
-  width: 100%;
+:root .footer-gradient,
+    [data-theme="light"] .footer-gradient {
+  background-image: linear-gradient(
+            to right,
+            rgb(30, 102, 245),
+            rgb(136, 57, 239),
+            rgb(230, 69, 83)
+        );
 }
 
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
+/* Dark theme */
+
+@media (prefers-color-scheme: dark) {
+  :root:not([data-theme="light"]) {
+    a:hover {
+      color: var(--color-macchiato-blue);
+    }
+    body {
+      color: var(--color-macchiato-text);
+      background-color: var(--color-macchiato-base);
+    }
+    pre {
+      background-color: var(--color-frappe-base);
+    }
+    pre code {
+      &::before {
+        background-color: var(--color-frappe-base);
+        color: var(--color-frappe-text);
+      }
+    }
   }
 }
 
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
+[data-theme="dark"] {
+  a:hover {
+    color: var(--color-macchiato-blue);
   }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
+  body {
+    color: var(--color-macchiato-text);
+    background-color: var(--color-macchiato-base);
   }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
+  pre {
+    background-color: var(--color-frappe-base);
   }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
+  pre code {
+    &::before {
+      background-color: var(--color-frappe-base);
+      color: var(--color-frappe-text);
+    }
+  }
+  .footer-gradient {
+    background-image: linear-gradient(
+                to right,
+                rgb(245, 169, 127),
+                rgb(238, 212, 159),
+                rgb(166, 218, 149)
+            );
   }
 }
 
 .static {
-  position: static;
+  position: static
 }
 
 .fixed {
-  position: fixed;
+  position: fixed
 }
 
-.absolute {
-  position: absolute;
+.sticky {
+  position: sticky
 }
 
-.relative {
-  position: relative;
-}
-
-.inset-0 {
-  inset: 0px;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.right-4 {
-  right: 1rem;
+.left-\[calc\(50\%-624px\)\] {
+  left: calc(50% - 624px)
 }
 
 .top-4 {
-  top: 1rem;
-}
-
-.z-50 {
-  z-index: 50;
+  top: 1rem
 }
 
 .float-right {
-  float: right;
+  float: right
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
+.-mx-4 {
+  margin-left: -1rem;
+  margin-right: -1rem
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem
 }
 
 .my-4 {
   margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 1rem
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
+.-mt-0\.5 {
+  margin-top: -0.125rem
 }
 
 .mb-4 {
-  margin-bottom: 1rem;
+  margin-bottom: 1rem
 }
 
 .mb-6 {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
+.ml-0 {
+  margin-left: 0px
+}
+
+.ml-3 {
+  margin-left: 0.75rem
+}
+
+.ml-6 {
+  margin-left: 1.5rem
 }
 
 .mr-2 {
-  margin-right: 0.5rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.mt-1\.5 {
-  margin-top: 0.375rem;
-}
-
-.mt-12 {
-  margin-top: 3rem;
+  margin-right: 0.5rem
 }
 
 .mt-4 {
-  margin-top: 1rem;
+  margin-top: 1rem
 }
 
 .block {
-  display: block;
+  display: block
+}
+
+.inline-block {
+  display: inline-block
 }
 
 .inline {
-  display: inline;
+  display: inline
 }
 
 .flex {
-  display: flex;
-}
-
-.grid {
-  display: grid;
+  display: flex
 }
 
 .contents {
-  display: contents;
+  display: contents
 }
 
 .hidden {
-  display: none;
+  display: none
 }
 
 .size-60 {
   width: 15rem;
-  height: 15rem;
+  height: 15rem
 }
 
-.h-4 {
-  height: 1rem;
+.h-1 {
+  height: 0.25rem
 }
 
-.h-8 {
-  height: 2rem;
+.h-\[1em\] {
+  height: 1em
 }
 
-.h-full {
-  height: 100%;
+.w-64 {
+  width: 16rem
 }
 
-.max-h-\[90vh\] {
-  max-height: 90vh;
+.w-\[100vw\] {
+  width: 100vw
 }
 
-.min-h-screen {
-  min-height: 100vh;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-8 {
-  width: 2rem;
+.w-auto {
+  width: auto
 }
 
 .w-full {
-  width: 100%;
+  width: 100%
 }
 
-.max-w-full {
-  max-width: 100%;
-}
-
-.max-w-screen-2xl {
-  max-width: 1536px;
-}
-
-.max-w-screen-lg {
-  max-width: 1024px;
-}
-
-.flex-1 {
-  flex: 1 1 0%;
-}
-
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.max-w-2xl {
+  max-width: 42rem
 }
 
 .cursor-pointer {
-  cursor: pointer;
+  cursor: pointer
 }
 
 .list-none {
-  list-style-type: none;
-}
-
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+  list-style-type: none
 }
 
 .flex-col {
-  flex-direction: column;
+  flex-direction: column
 }
 
 .flex-wrap {
-  flex-wrap: wrap;
-}
-
-.items-start {
-  align-items: flex-start;
+  flex-wrap: wrap
 }
 
 .items-center {
-  align-items: center;
+  align-items: center
 }
 
 .justify-center {
-  justify-content: center;
+  justify-content: center
 }
 
 .justify-between {
-  justify-content: space-between;
+  justify-content: space-between
 }
 
 .gap-4 {
-  gap: 1rem;
+  gap: 1rem
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
-.space-x-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
-  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-
-.overflow-auto {
-  overflow: auto;
-}
-
-.overflow-hidden {
-  overflow: hidden;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse))
 }
 
 .rounded-full {
-  border-radius: 9999px;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
-}
-
-.bg-opacity-50 {
-  --tw-bg-opacity: 0.5;
-}
-
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.p-4 {
-  padding: 1rem;
+  border-radius: 9999px
 }
 
 .px-2 {
   padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  padding-right: 0.5rem
 }
 
 .px-4 {
   padding-left: 1rem;
-  padding-right: 1rem;
+  padding-right: 1rem
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem
 }
 
 .py-4 {
   padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-bottom: 1rem
 }
 
 .pb-6 {
-  padding-bottom: 1.5rem;
+  padding-bottom: 1.5rem
 }
 
-.text-left {
-  text-align: left;
+.pl-0 {
+  padding-left: 0px
 }
 
-.text-center {
-  text-align: center;
-}
-
-.text-right {
-  text-align: right;
+.align-middle {
+  vertical-align: middle
 }
 
 .text-3xl {
   font-size: 1.875rem;
-  line-height: 2.25rem;
+  line-height: 2.25rem
 }
 
 .text-base {
   font-size: 1rem;
-  line-height: 1.5rem;
+  line-height: 1.5rem
 }
 
 .text-lg {
   font-size: 1.125rem;
-  line-height: 1.75rem;
+  line-height: 1.75rem
 }
 
 .text-sm {
   font-size: 0.875rem;
-  line-height: 1.25rem;
+  line-height: 1.25rem
 }
 
 .text-xl {
   font-size: 1.25rem;
-  line-height: 1.75rem;
+  line-height: 1.75rem
 }
 
 .font-bold {
-  font-weight: 700;
-}
-
-.font-medium {
-  font-weight: 500;
+  font-weight: 700
 }
 
 .capitalize {
-  text-transform: capitalize;
+  text-transform: capitalize
 }
 
 .italic {
-  font-style: italic;
+  font-style: italic
 }
 
 .leading-relaxed {
-  line-height: 1.625;
+  line-height: 1.625
 }
 
 .tracking-wider {
-  letter-spacing: 0.05em;
+  letter-spacing: 0.05em
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+.no-underline {
+  text-decoration-line: none
 }
 
-.opacity-0 {
-  opacity: 0;
-}
-
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.opacity-80 {
+  opacity: 0.8
 }
 
 .filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.transition-colors {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow)
 }
 
 .transition-opacity {
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+  transition-duration: 150ms
 }
 
-.transition-shadow {
-  transition-property: box-shadow;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-transform {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.duration-200 {
-  transition-duration: 200ms;
-}
-
-.duration-300 {
-  transition-duration: 300ms;
-}
-
-.hover\:text-gray-300:hover {
+.hover\:text-\[rgb\(30\2c 102\2c 245\)\]:hover {
   --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+  color: rgb(30 102 245 / var(--tw-text-opacity, 1))
 }
 
-.hover\:shadow-xl:hover {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.hover\:opacity-100:hover {
+  opacity: 1
 }
 
-.focus\:outline-none:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.group:hover .group-hover\:scale-105 {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.group:hover .group-hover\:opacity-100 {
-  opacity: 1;
+.hover\:opacity-70:hover {
+  opacity: 0.7
 }
 
 @media (min-width: 640px) {
-  .sm\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .sm\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px
   }
 
-  .sm\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-}
-
-@media (min-width: 768px) {
-  .md\:w-1\/2 {
-    width: 50%;
+  .sm\:w-full {
+    width: 100%
   }
 }
 
 @media (min-width: 1024px) {
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .lg\:block {
+    display: block
   }
+}
 
-  .lg\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
+@media (prefers-color-scheme: dark) {
+  .dark\:hover\:text-\[rgb\(138\2c 173\2c 244\)\]:hover {
+    --tw-text-opacity: 1;
+    color: rgb(138 173 244 / var(--tw-text-opacity, 1))
   }
 }
